--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,27 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+
 @custom-variant dark (&:is(.dark *));
 
+@theme  {
+   --fade-in-up: fade-in-up 0.6s ease-out;
+   
+  @keyframes "fade-in-up": {
+          "0%": {
+            opacity: "0";
+            transform: "translateY(20px)";
+          };
+          "100%": {
+            opacity: "1";
+            transform: "translateY(0)";
+          };
+        };
+};
+
+
 @theme inline {
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
